unit_tests/preprocessor/errors/undef-line-twice.correct
preprocessor/errors/undef-line-twice:2: warning: undefining "__LINE__"
